Fixed layout issues

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -25,3 +25,8 @@ h4 {
   margin-bottom: 0;
   padding-bottom: 10px;
 }
+
+.grid {
+  margin-left: 0px;
+  margin-right: 0px;
+}
